# custom_ros_messages

./: CMakeLists.txt  README.md  package.xml
action/: DualArm.action  FrameTask.action  GotoPose.action  HandAdaptiveForce.action  MotorCmd.msg  MotorCmds.msg  NamedConfig.action  ParkerGotoPose.action  ScanBattery.action  SkillCloseDoor.action  SkillCloseLid.action  SkillFrontierExplore.action  SkillGrasp.action  SkillNavigate.action  SkillOpenDoor.action  SkillOpenLid.action  SkillPickPlace.action  SkillPress.action  SkillRetrieveMemory.action  SkillSlideRack.action  SkillTurnLever.action  SkillTwistKnob.action
msg/: Detection.msg  DetectionBundle.msg  Dummy.msg  MotorCmd.msg  MotorState.msg
srv/: EthernetMotor.srv  GeminiQuery.srv  GoHome.srv  GraspGen.srv  ParkerGetPoseTrigger.srv  Query.srv  RemovePart.srv  SamSegment.srv  SetHandAngles.srv  UR16BehaviorTrigger.srv  UnscrewPose.srv  UpdateBeliefs.srv  UpdateTrackedObject.srv
